# task_manager

./: .env.template  README.md  pyproject.toml  requirements.txt  task_manager.db
migrations/: env.py
migrations/versions/: 32c304581670_init.py
task_manager/: __init__.py  api.py  config.py  crud.py  db.py  deps.py  main.py  models.py  schemas.py  utils.py
task_manager/api/routers/: tasks.py
task_manager/core/: config.py
task_manager/db/: dependencies.py  session.py
task_manager/db/models/: task.py  task_status.py
task_manager/repositories/: dependencies.py  task_repository.py
task_manager/schemas/: tasks.py
task_manager/services/: task_service.py  utils.py
tests/: conftest.py  test_tasks.py
